src/queryparser/parser.js
// Generated by Peggy 2.0.1.
//
// https://peggyjs.org/

"use strict";

function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var loc = this.location.source + ":" + s.line + ":" + s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Query: peg$parseQuery };
  var peg$startRuleFunction = peg$parseQuery;

  var peg$c0 = "resource";
  var peg$c1 = "all";
  var peg$c2 = "id";
  var peg$c3 = "name";
  var peg$c4 = "regex";
  var peg$c5 = "whereProperties";
  var peg$c6 = "whereMetrics";
  var peg$c7 = "and";
  var peg$c8 = "or";
  var peg$c9 = "avg";
  var peg$c10 = "min";
  var peg$c11 = "max";
  var peg$c12 = "sum";
  var peg$c13 = "count";
  var peg$c14 = "variance";
  var peg$c15 = "stddev";
  var peg$c16 = "=";
  var peg$c17 = "!=";
  var peg$c18 = "<";
  var peg$c19 = ">";
  var peg$c20 = "<=";
  var peg$c21 = ">=";
  var peg$c22 = "not exists";
  var peg$c23 = "empty";
  var peg$c24 = "exists";
  var peg$c25 = "not empty";
  var peg$c26 = "like";
  var peg$c27 = "in";
  var peg$c28 = "not in";
  var peg$c29 = "contains";
  var peg$c30 = "starts_with";
  var peg$c31 = "ends_with";
  var peg$c32 = "not starts_with";
  var peg$c33 = "not ends_with";
  var peg$c34 = "not contains";
  var peg$c35 = "not regex";
  var peg$c36 = "whereState";
  var peg$c37 = "whereStatus";
  var peg$c38 = "whereHealth";
  var peg$c39 = "whereTags";
  var peg$c40 = "metrics";
  var peg$c41 = "\\";
  var peg$c42 = ".";
  var peg$c43 = ",";
  var peg$c44 = "(";
  var peg$c45 = ")";
  var peg$c46 = "number";
  var peg$c47 = "\"";
  var peg$c48 = "/";
  var peg$c49 = "b";
  var peg$c50 = "f";
  var peg$c51 = "n";
  var peg$c52 = "r";
  var peg$c53 = "t";
  var peg$c54 = "u";

  var peg$r0 = /^[A-Za-z0-9_:|.\-]/;
  var peg$r1 = /^[ \t\n\r]/;
  var peg$r2 = /^[^\0-\x1F"\\]/;
  var peg$r3 = /^[0-9]/;
  var peg$r4 = /^[0-9a-f]/i;

  var peg$e0 = peg$literalExpectation("resource", false);
  var peg$e1 = peg$literalExpectation("all", false);
  var peg$e2 = peg$literalExpectation("id", false);
  var peg$e3 = peg$literalExpectation("name", false);
  var peg$e4 = peg$literalExpectation("regex", false);
  var peg$e5 = peg$literalExpectation("whereProperties", false);
  var peg$e6 = peg$literalExpectation("whereMetrics", false);
  var peg$e7 = peg$literalExpectation("and", false);
  var peg$e8 = peg$literalExpectation("or", false);
  var peg$e9 = peg$literalExpectation("avg", false);
  var peg$e10 = peg$literalExpectation("min", false);
  var peg$e11 = peg$literalExpectation("max", false);
  var peg$e12 = peg$literalExpectation("sum", false);
  var peg$e13 = peg$literalExpectation("count", false);
  var peg$e14 = peg$literalExpectation("variance", false);
  var peg$e15 = peg$literalExpectation("stddev", false);
  var peg$e16 = peg$literalExpectation("=", false);
  var peg$e17 = peg$literalExpectation("!=", false);
  var peg$e18 = peg$literalExpectation("<", false);
  var peg$e19 = peg$literalExpectation(">", false);
  var peg$e20 = peg$literalExpectation("<=", false);
  var peg$e21 = peg$literalExpectation(">=", false);
  var peg$e22 = peg$literalExpectation("not exists", false);
  var peg$e23 = peg$literalExpectation("empty", false);
  var peg$e24 = peg$literalExpectation("exists", false);
  var peg$e25 = peg$literalExpectation("not empty", false);
  var peg$e26 = peg$literalExpectation("like", false);
  var peg$e27 = peg$literalExpectation("in", false);
  var peg$e28 = peg$literalExpectation("not in", false);
  var peg$e29 = peg$literalExpectation("contains", false);
  var peg$e30 = peg$literalExpectation("starts_with", false);
  var peg$e31 = peg$literalExpectation("ends_with", false);
  var peg$e32 = peg$literalExpectation("not starts_with", false);
  var peg$e33 = peg$literalExpectation("not ends_with", false);
  var peg$e34 = peg$literalExpectation("not contains", false);
  var peg$e35 = peg$literalExpectation("not regex", false);
  var peg$e36 = peg$literalExpectation("whereState", false);
  var peg$e37 = peg$literalExpectation("whereStatus", false);
  var peg$e38 = peg$literalExpectation("whereHealth", false);
  var peg$e39 = peg$literalExpectation("whereTags", false);
  var peg$e40 = peg$literalExpectation("metrics", false);
  var peg$e41 = peg$classExpectation([["A", "Z"], ["a", "z"], ["0", "9"], "_", ":", "|", ".", "-"], false, false);
  var peg$e42 = peg$literalExpectation("\\", false);
  var peg$e43 = peg$literalExpectation(".", false);
  var peg$e44 = peg$literalExpectation(",", false);
  var peg$e45 = peg$literalExpectation("(", false);
  var peg$e46 = peg$literalExpectation(")", false);
  var peg$e47 = peg$literalExpectation("number", false);
  var peg$e48 = peg$otherExpectation("integer");
  var peg$e49 = peg$otherExpectation("number");
  var peg$e50 = peg$otherExpectation("whitespace");
  var peg$e51 = peg$classExpectation([" ", "\t", "\n", "\r"], false, false);
  var peg$e52 = peg$otherExpectation("string");
  var peg$e53 = peg$literalExpectation("\"", false);
  var peg$e54 = peg$literalExpectation("/", false);
  var peg$e55 = peg$literalExpectation("b", false);
  var peg$e56 = peg$literalExpectation("f", false);
  var peg$e57 = peg$literalExpectation("n", false);
  var peg$e58 = peg$literalExpectation("r", false);
  var peg$e59 = peg$literalExpectation("t", false);
  var peg$e60 = peg$literalExpectation("u", false);
  var peg$e61 = peg$classExpectation([["\0", "\x1F"], "\"", "\\"], true, false);
  var peg$e62 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e63 = peg$classExpectation([["0", "9"], ["a", "f"]], false, true);

  var peg$f0 = function(type, instances, metrics, aggregation) { return { type, instances, metrics, aggregation }};
  var peg$f1 = function(resourceType) { return resourceType };
  var peg$f2 = function(instanceSelector) { return instanceSelector };
  var peg$f3 = function(first, theRest) { return [ first, ...theRest ]};
  var peg$f4 = function(data) { return data };
  var peg$f5 = function(type) { return { type, arg: [] } };
  var peg$f6 = function(type, arg) { return { type, arg } };
  var peg$f7 = function(type, arg) { return { type, arg } };
  var peg$f8 = function(type, arg) { return { type, arg } };
  var peg$f9 = function(type, arg) { return { type, arg } };
  var peg$f10 = function(first, theRest) { return [ first, ...theRest ] };
  var peg$f11 = function(conjunctive, term) { return { ...term, conjunctive } };
  var peg$f12 = function(name, arg) { return { name: name.toUpperCase(), arg: [ arg ] } };
  var peg$f13 = function(name, arg0, arg1) { return { name: name.toUpperCase(), arg: [ arg0, arg1 ] } };
  var peg$f14 = function(left, operator, right) { return { name: operator, arg: [ left, right ] }};
  var peg$f15 = function(type, properties) { return { type, properties}};
  var peg$f16 = function() { return "EQ" };
  var peg$f17 = function() { return "NE" };
  var peg$f18 = function() { return "LT" };
  var peg$f19 = function() { return "GT" };
  var peg$f20 = function() { return "LT_EQ" };
  var peg$f21 = function() { return "GT_EQ" };
  var peg$f22 = function() { return text().replace(" ", "_").toUpperCase()};
  var peg$f23 = function() { return text().replace(" ", "_").toUpperCase()};
  var peg$f24 = function(type, arg) { return { type, arg }};
  var peg$f25 = function(type, arg) { return { type, arg }};
  var peg$f26 = function(type, arg) { return { type, arg }};
  var peg$f27 = function(type, arg) { return { type, arg }};
  var peg$f28 = function(metrics) { return metrics };
  var peg$f29 = function() { return text() };
  var peg$f30 = function(identifier) { return identifier };
  var peg$f31 = function(first, theRest) { return [ first, ...theRest ] };
  var peg$f32 = function(data) { return data };
  var peg$f33 = function(first, theRest) { return [ first, ...theRest ] };
  var peg$f34 = function(data) { return data };
  var peg$f35 = function(first, theRest) { return [ first, ...theRest ]};
  var peg$f36 = function(data) { return data };
  var peg$f37 = function(chars) { return chars.join("") };
  var peg$f38 = function() { return parseInt(text(), 10); };
  var peg$f39 = function() { return parseFloat(text()) };
  var peg$f40 = function(chars) { return chars.join(""); };
  var peg$f41 = function() { return "\b"; };
  var peg$f42 = function() { return "\f"; };
  var peg$f43 = function() { return "\n"; };
  var peg$f44 = function() { return "\r"; };
  var peg$f45 = function() { return "\t"; };
  var peg$f46 = function(digits) {
          return String.fromCharCode(parseInt(digits, 16));
        };
  var peg$f47 = function(sequence) { return sequence; };
  var peg$currPos = 0;
  var peg$savedPos = 0;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = 0;
  var peg$maxFailExpected = [];
  var peg$silentFails = 0;

  var peg$result;

  if ("startRule" in options) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      p = pos - 1;
      while (!peg$posDetailsCache[p]) {
        p--;
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    return {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseQuery() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    s1 = peg$parse_();
    s2 = peg$parseTypeSpec();
    if (s2 !== peg$FAILED) {
      s3 = peg$parseDot();
      if (s3 !== peg$FAILED) {
        s4 = peg$parseInstanceSelectors();
        if (s4 !== peg$FAILED) {
          s5 = peg$parse_();
          s6 = peg$parseMetricSelector();
          if (s6 !== peg$FAILED) {
            s7 = peg$parseAggregation();
            if (s7 === peg$FAILED) {
              s7 = null;
            }
            peg$savedPos = s0;
            s0 = peg$f0(s2, s4, s6, s7);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseTypeSpec() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 8) === peg$c0) {
      s1 = peg$c0;
      peg$currPos += 8;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e0); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLP();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseIdentifierList();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseRP();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f1(s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstanceSelectors() {
    var s0, s1;

    s0 = peg$currPos;
    s1 = peg$parseInstanceFilterChain();
    if (s1 !== peg$FAILED) {
      peg$savedPos = s0;
      s1 = peg$f2(s1);
    }
    s0 = s1;

    return s0;
  }

  function peg$parseInstanceFilterChain() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseInstanceFilter();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseInstanceFilterNode();
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseInstanceFilterNode();
      }
      peg$savedPos = s0;
      s0 = peg$f3(s1, s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstanceFilterNode() {
    var s0, s1, s2;

    s0 = peg$currPos;
    s1 = peg$parseDot();
    if (s1 !== peg$FAILED) {
      s2 = peg$parseInstanceFilter();
      if (s2 !== peg$FAILED) {
        peg$savedPos = s0;
        s0 = peg$f4(s2);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstanceFilter() {
    var s0;

    s0 = peg$parseAll();
    if (s0 === peg$FAILED) {
      s0 = peg$parseInstanceId();
      if (s0 === peg$FAILED) {
        s0 = peg$parseInstanceName();
        if (s0 === peg$FAILED) {
          s0 = peg$parseInstanceRegex();
          if (s0 === peg$FAILED) {
            s0 = peg$parseHealthFilter();
            if (s0 === peg$FAILED) {
              s0 = peg$parseStateFilter();
              if (s0 === peg$FAILED) {
                s0 = peg$parseStatusFilter();
                if (s0 === peg$FAILED) {
                  s0 = peg$parseTagFilter();
                  if (s0 === peg$FAILED) {
                    s0 = peg$parseComplexInstanceFilter();
                  }
                }
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseAll() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 3) === peg$c1) {
      s1 = peg$c1;
      peg$currPos += 3;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLP();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseRP();
        if (s3 !== peg$FAILED) {
          peg$savedPos = s0;
          s0 = peg$f5(s1);
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstanceId() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 2) === peg$c2) {
      s1 = peg$c2;
      peg$currPos += 2;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e2); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLP();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseLiteralStringList();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseRP();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f6(s1, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstanceName() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 4) === peg$c3) {
      s1 = peg$c3;
      peg$currPos += 4;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLP();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseLiteralStringList();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseRP();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f7(s1, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseInstanceRegex() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.substr(peg$currPos, 5) === peg$c4) {
      s1 = peg$c4;
      peg$currPos += 5;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e4); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseLP();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseRegexpList();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseRP();
          if (s4 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f8(s1, s3);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseComplexInstanceFilter() {
    var s0, s1, s2, s3, s4;
